# unibase-agent-sdk

./: README.md  debug_message.py  pyproject.toml  requirements.txt
.agent/workflows/: simplify_project.md
examples/: README.md  a2a_agent_example.py  a2a_client.py  agent_message_format.py  agent_registration_direct_mode.py  agent_registration_gateway_mode.py  agent_with_langchain_memory.py  agent_with_mem0.py  basic_agent_registration.py  external_agent_example.py  external_agent_local.py  full_workflow.py  llm_sdk_integrations.py  multi_middleware_agent.py  public_agent_full.py  streaming_agent.py  streaming_agent_with_registration.py  trigger_agent_via_aip.py  wrap_any_agent.py
examples/aip_agents/: QUICKSTART.md  README.md  __init__.py  calculator_agent.py  launch_all_agents.py  research_agent.py  test_agent_client.py  travel_agent.py  weather_agent.py
examples/complete/: private_agent_full.py
tests/: test_a2a_protocol.py  test_agent_wrappers.py  test_all_agent_sdks.py  test_all_memory_middlewares.py  test_all_sdks.py  test_transparent_memory_api.py
unibase_agent_sdk/: __init__.py
unibase_agent_sdk/a2a/: __init__.py  agent_card.py  client.py  server.py  types.py
unibase_agent_sdk/adapters/: __init__.py  base.py  claude_adapter.py  langchain_adapter.py  openai_adapter.py
unibase_agent_sdk/agents/: __init__.py  autogen_agent.py  crewai_agent.py  llamaindex_agent.py  phidata_agent.py
unibase_agent_sdk/core/: __init__.py  base_agent.py  base_memory.py  exceptions.py  proxy_utils.py  type_adapters.py  types.py
unibase_agent_sdk/memory/: __init__.py  da_uploader.py  manager.py  membase_client.py
unibase_agent_sdk/memory/middlewares/: __init__.py  base.py  chromadb_middleware.py  langchain_middleware.py  mem0_middleware.py  memgpt_middleware.py  pinecone_middleware.py  qdrant_middleware.py  redis_middleware.py  weaviate_middleware.py  zep_middleware.py
unibase_agent_sdk/registry/: __init__.py  registry.py
unibase_agent_sdk/utils/: config.py  logger.py
unibase_agent_sdk/wrappers/: __init__.py  adk.py  generic.py  langgraph.py
