[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unibase-agent-sdk"
version = "0.1.0"
description = "SDK for building AI agents on Unibase Agent Interoperability Protocol"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Unibase Team", email = "team@unibase.io"}
]
keywords = ["ai", "agents", "a2a", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "a2a-sdk>=0.3.10",
    "unibase-aip-sdk",
    "openai>=2.15.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/unibaseio/unibase-agent-sdk"
Documentation = "https://github.com/unibaseio/unibase-agent-sdk#readme"
Repository = "https://github.com/unibaseio/unibase-agent-sdk"

[tool.hatch.build.targets.wheel]
packages = ["unibase_agent_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
# For production: install from GitHub
unibase-aip-sdk = { git = "https://github.com/unibaseio/unibase-aip-sdk.git" }

# For local development: comment out the line above and uncomment below
# unibase-aip-sdk = { path = "../unibase-aip-sdk", editable = true }
